feat(server): missing routes, resolve objects
Kinda sorta like the old API, but simpler and with less dependencies.
