# server/src/app.ts
@@ -6,6 +6,7 @@ import { logger } from 'hono/logger';
 import * as db from './db.ts';
 import { User } from './schema.ts';
 
+// TODO: use zod do parse request bodies.
 export function buildApp(database: db.Database): Hono {
     const app = new Hono();
 
@@ -22,12 +23,23 @@ export function buildApp(database: db.Database): Hono {
         return c.json({ user: fakeUser });
     });
 
-    const usersApp = new Hono();
-    usersApp.get('/', async (c: Context) => c.json(await db.listUsers(database)));
-    usersApp.get('/:id', async (c: Context) => c.json(await db.getUser(database, c.req.param('id'))));
-    usersApp.post('/', async (c: Context) => {
-        const { name } = await c.req.json();
-        const insertedId = await db.addUser(database, { name });
+    const commentsApp = new Hono();
+    commentsApp.get('/', async (c: Context) => c.json(await db.listComments(database)));
+    commentsApp.get('/:id', async (c: Context) => c.json(await db.getComment(database, c.req.param('id'))));
+    commentsApp.post('/', async (c: Context) => {
+        const { parent, ...body } = await c.req.json();
+        const comment = { ...body, created: new Date(), likes: [] };
+        const insertedId = await db.addComment(database, parent, comment);
+        return c.json(insertedId);
+    });
+
+    const likesApp = new Hono();
+    likesApp.get('/', async (c: Context) => c.json(await db.listLikes(database)));
+    likesApp.get('/:id', async (c: Context) => c.json(await db.getLike(database, c.req.param('id'))));
+    likesApp.post('/', async (c: Context) => {
+        const { parent, parentType, ...body } = await c.req.json();
+        const like = { ...body, created: new Date() };
+        const insertedId = await db.addLike(database, parent, parentType, like);
         return c.json(insertedId);
     });
 
@@ -35,8 +47,9 @@ export function buildApp(database: db.Database): Hono {
     postsApp.get('/', async (c: Context) => c.json(await db.listPosts(database)));
     postsApp.get('/:id', async (c: Context) => c.json(await db.getPost(database, c.req.param('id'))));
     postsApp.post('/', async (c: Context) => {
-        const { content } = await c.req.json();
-        const insertedId = await db.addPost(database, { content });
+        const body = await c.req.json();
+        const post = { ...body, created: new Date(), comments: [], likes: [] };
+        const insertedId = await db.addPost(database, post);
         return c.json(insertedId);
     });
 
@@ -52,7 +65,8 @@ export function buildApp(database: db.Database): Hono {
 
     // Main router.
     app.route('/auth', authApp);
-    app.route('/users', usersApp);
+    app.route('/comments', commentsApp);
+    app.route('/likes', likesApp);
     app.route('/posts', postsApp);
 
     return app;
